# rtsp-client

./: Cargo.toml  LICENSE-MIT  README.md
src/: main.rs  rtp.rs  rtsp.rs
src/rtp/: packet.rs
src/rtsp/: data_stream.rs
