[package]
name = "rtsp-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
tokio = { version = "1.15", features = ["full"] }
url = "2"
http-auth = "0.1.5"